# autom8y-asana

./: .dockerignore  .envrc  .gitignore  .gitleaks.toml  .hadolint.yaml  .mcp.json  .mise.toml  .pre-commit-config.yaml  .semgrep.yml  .test_durations  AUDIT-ATTESTATION.md  CHANGELOG.md  Dockerfile  Dockerfile.dev  Dockerfile.smoke  POC_DUAL_MODE_VALIDATION.md  README.md  SPRINT-1-AUDIT-REPORT.md  SPRINT-1-COMPLETION-SUMMARY.md  SPRINT-1-SESSION-SUMMARY.md  SPRINT_PROMPT.md  active_offers.csv  aegis-report.json  configspec.toml  devbox.json  docker-compose.override.yml  docker-compose.yml  justfile  pyproject.toml  renovate.json  run_smoke_test.py  secretspec.toml  setup.cfg  smoke_1211872268838349.html  smoke_test_report.csv  spectral-fleet.yaml
.a8/autom8y/: ecosystem.conf  org-secrets.conf
.ci/: semantic-baseline.json  semantic-score.py
.claude/: .shared-skills  .worktree-meta.json  ACTIVE_RITE  ACTIVE_TEAM  AGENT_MANIFEST.json  CLAUDE.md  COMMAND_REGISTRY.md  COMMAND_REGISTRY.md.cem-backup  GLOSSARY.md  KNOSSOS_MANIFEST.yaml  PROJECT_CONTEXT.md  PROVENANCE_MANIFEST.yaml  REPOSITORY_MAP.md  SPRINT_CONTEXT.md  TEAM_DOCUMENTATION_PROTOCOL.md  forge-workflow.yaml  settings.json  settings.local.json
.claude/.cem/: checksum-cache.json  manifest.json
.claude/.wip/: ANALYSIS-section-timeline-remediation.md  SPIKE-phase1-core-system-mapping.md  SPIKE-phase2-legacy-pattern-extraction.md  TEST_PROFILE.md  (+2 more)
.env/: defaults  local.example
.gemini/: GEMINI.md
.knossos/: ACTIVE_RITE  ACTIVE_WORKFLOW.yaml  KNOSSOS_MANIFEST.yaml  PROVENANCE_MANIFEST.yaml
.know/: api.md  architecture.md  cache-freshness-ttl-manifest.yaml  conventions.md  db.md  defer-watch.yaml  design-constraints.md  env-loader.md  obs.md  scar-tissue.md  test-coverage.md
.wip/: ANALYSIS-REPORT-tests-unit-p1.md  DECAY-section-timeline-remediation-2026-02-20.md  DETECTION-section-timeline-remediation-2026-02-20.md  REMEDY-section-timeline-remediation.md  REMEDY-tests-unit-p1.md  SMELL-REPORT-INSIGHTS-PIPELINE-2026-02-20.md  SMELL-REPORT-TYPE-CHECKING.md  SMELL-REPORT-test-arch-remediation.md  VERDICT-section-timeline-remediation.md  insights_export_Natural_Medicine_and_Chiropractic_Specialties_20260220.html  insights_export_Natural_Medicine_and_Chiropractic_Specialties_20260221.html  insights_export_Natural_Medicine_and_Chiropractic_Specialties_20260222.html
config/: lifecycle_stages.yaml  pipeline-rules.yaml.example
docs/: CONTENT-BRIEFS-2025-12-24.md  CONTENT-INVENTORY.md  CONTRIBUTION-GUIDE.md  CONVENTIONS.md  DOC-AUDIT-REPORT-2025-12-24.md  INDEX.md  INFORMATION-ARCHITECTURE-SPEC-2026-02.md  PHASE-7-PATTERN-EXTRACTION-VERIFICATION.md  VALIDATION-REPORT-DOC-REFACTOR.md  test-profiling-report.md
examples/: 01_basic_setup.py  02_task_crud.py  03_pagination.py  04_batch_create.py  05_batch_update.py  06_custom_fields.py  07_projects_sections.py  08_webhooks.py  09_protocol_adapters.py  10_error_handling.py  11_autom8_cache_integration.py  12_save_session_basics.py  README.md  _config.py  autom8_adapters.py
mcp/: README.md  pyproject.toml  serve_stdio.py
mcp/asana_mcp/: __init__.py  assembly.py  bridge.py  context.py  envelopes.py  errors.py  observability.py  schemas.py  server.py  settings.py
mcp/asana_mcp/tools/: __init__.py  _common.py  _match_business_stub.py  composite_write.py  confirm_gate.py  discovery.py  query.py  resolve.py  tag_resolve.py  workflows.py
mcp/probes/: README-C2-PROBE.md  c2_sandbox_reput_probe.py
mcp/tests/: conftest.py  test_assembly_floor.py  test_bridge_401_fail_clean.py  test_budget_partition_and_rate_cap.py  test_cold_frame_mapping.py  test_composite_write_s3.py  test_confirm_gate_rb1.py  test_discovery_tools.py  test_errors_c3.py  test_errors_passthrough.py  test_fences.py  test_honesty_passthrough.py  test_import_safety.py  test_import_safety_obs.py  test_instrument_seam.py  test_query_tools.py  test_readiness_gate.py  test_resolve_tool.py  test_schema_canary.py  test_seam_conformance.py  test_span_and_traceparent.py  test_tag_dual_key_wsb2.py  test_timeout_cascade_invariant.py  test_workflows_disclosure.py
prototypes/: test_autom8y_telemetry_poc.py
queries/: active_offers.yaml  mrr_by_vertical.yaml  offers_with_business.yaml  offers_with_spend.yaml
scripts/: _demo_utils.py  aegis-check.py  analyze_test_timings.py  calc_metric.py  calc_mrr.py  calc_weekly_ad_spend.py  demo_business_model.py  demo_dynamic_api.sh  demo_parallel_fetch.py  demo_query_layer.py  demo_sdk_operations.py  diagnose_hydration.py  diagnostic_tier1_detection.py  entrypoint.sh  example_offer_traversal.py  example_pipeline_automation.py  gen_namespace_config.py  generate_openapi.py  invoke_workflow.py  qa_search_poc.py  smoke-freeze.sh  smoke_test_api.py  spike_freshness_poc.py  validate_openapi.py  validate_secretspec.py  warm_cache.py
smoke_output/: insights_export_1211403363567747_20260223_163754.html  insights_export_1211403363567747_20260223_192719.html  insights_export_1211403363567747_20260223_192853.html  insights_export_1211403363567747_20260224_110011.html  insights_export_1211403363567747_20260224_110029.html  insights_export_1211403363567747_20260225_083512.html  insights_export_1211403363567747_20260225_125453.html  insights_export_1211403363567747_20260225_125936.html  insights_export_1211403363567747_20260225_131106.html  insights_export_1211403363567747_20260226_120407.html  insights_export_1211403363567747_20260226_150638.html  insights_export_1211403363567747_20260226_160938.html  insights_export_1211403363567747_20260226_184544.html  insights_export_1211403363567747_20260227_172446.html  insights_export_1211403363567747_20260228_141307.html
src/: autom8_query_cli.py  smoke_test_report.csv
tests/: __init__.py  conftest.py  test_computation_spans.py  test_openapi_endpoint.py  test_openapi_fuzz.py
tmp/: debug_resolver_index.py  debug_vertical.py  debug_vertical_simple.py  export_df_clipboard.py  qa_adversarial_cascade_tests.py  qa_hotfix_test.py  qa_individual_tests.py  qa_stability_check.py  quick_verify.py  test_vertical_cascade.py  validate_phase3_unit_cache.py
(+3941 files in other folders)
