[project]
name = "autom8-asana"
version = "1.0.0"
description = "Async-first Asana API client extracted from autom8"
# readme = "README.md"  # Deferred to Phase 5
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "asana>=5.0.3",
    "polars>=0.20.0",
    "arrow>=1.3.0",
    # Platform primitives (TDD-PRIMITIVE-MIGRATION-001)
    "autom8y-config>=0.2.1",
    "autom8y-http>=0.3.0",
    "autom8y-cache>=0.3.0", # Per TDD-GID-RESOLUTION-SERVICE: HierarchyAwareResolver + schema versioning
    "autom8y-log>=0.4.0",
    # Platform observability (PRD-PLATFORM-OBSERVABILITY-STD M3.3)
    "autom8y-telemetry[fastapi]>=0.2.0",
    "boto3>=1.42.19",  # S3 for progressive cache warming (asyncio.to_thread)
]

[project.optional-dependencies]
redis = [
    "redis>=5.0.0",
    "hiredis>=2.0.0",  # C parser for performance (optional)
]
aws = [
    "boto3>=1.34.0",  # AWS SDK for Secrets Manager (ADR-VAULT-001)
]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "slowapi>=0.1.9",
    "structlog>=24.1.0",
]
# auth: Platform authentication via autom8y-auth SDK
# JWT validation, JWKS fetching, and crypto are encapsulated in the SDK
auth = [
    "autom8y-auth[observability]>=1.0.1",
]
# scheduler: Polling scheduler for development mode (production uses cron)
scheduler = [
    "apscheduler>=3.10.0",
]
# lambda: AWS Lambda Runtime Interface Client for container-based Lambda execution
# Required for dual-mode Docker images that run both ECS (uvicorn) and Lambda (handler)
lambda = [
    "awslambdaric>=2.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "respx>=0.20.0",  # httpx mocking
    "fakeredis>=2.20.0",  # Redis mocking for tests
    "moto>=5.0.0",  # AWS/S3 mocking for tests
    "boto3>=1.34.0",  # AWS SDK (required for moto)
    "boto3-stubs[secretsmanager]>=1.34.0",  # Type stubs for boto3
    "autom8y-auth[observability]>=1.0.1",  # Required for test_auth tests
    # SDK testing subpackages (per TDD-SDK-TESTING-ADOPTION)
    # [testing] extras activate once SDKs are published with testing subpackages.
    # Required versions: log>=0.5.0, cache>=0.3.1, http>=0.3.2
    # TODO: bump version pins after `just ca-publish-all` from autom8y monorepo
    "autom8y-log[testing]>=0.4.0",
    "autom8y-cache[testing]>=0.3.0",
    "autom8y-http[testing]>=0.3.0",
    "autom8y-config[testing]>=0.2.1",
    "autom8y-core[testing]>=0.1.0",
    "autom8y-auth[testing]>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autom8_asana"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60
timeout_method = "thread"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring live API access",
    "benchmark: marks tests as performance benchmarks",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

# Ignore missing stubs for optional dependencies
[[tool.mypy.overrides]]
module = "phonenumbers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "awslambdaric.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mypy_boto3_s3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prometheus_client"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "autom8_asana.models.core"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

# Exclude non-production code from strict linting
extend-exclude = [
    "examples/",
    "prototypes/",
    "scripts/",
    "tmp/",
    "docs/",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "G", "LOG"]
ignore = [
    "E501",   # Line length handled by formatter
    "B904",   # raise-without-from-inside-except - common pattern in HTTP handlers
    "B028",   # stacklevel in warnings - not critical for tests
    "B007",   # unused loop variable - often intentional for unpacking
    "B905",   # zip-without-strict - not needed for equal-length iterables
    "G002",   # %-format in logging is intentional (FR-LOG-005 lazy formatting)
    "G004",   # f-string in logging - we prefer lazy %s but don't ban f-strings
    "G010",   # logging.warn() deprecated -> logging.warning() (safety net)
    "G101",   # extra field name clashes - structlog unpacks extra into event_dict, no stdlib LogRecord conflict
]

[tool.ruff.lint.per-file-ignores]
# Tests have relaxed linting rules:
# - F841: unused variables (fixtures, mocks)
# - E402: imports after code (fixture setup)
# - F821: undefined names (removed classes like ProjectDataFrameBuilder)
# - F811: redefined imports
# - F401: unused imports (conditional test imports)
# - E711: comparison to None (testing equality operators)
# - B015: pointless comparison (testing comparison operators)
# - B017: blind exception assertions (pytest.raises(Exception))
# - B023: loop variable binding (threading tests)
"tests/**/*.py" = ["F841", "E402", "F821", "E711", "F811", "F401", "B015", "B017", "B023"]
"**/conftest.py" = ["F841", "E402"]
# Intentional delayed imports (circular import avoidance, logger-before-imports)
"src/autom8_asana/client.py" = ["E402"]
"src/autom8_asana/config.py" = ["E402"]
"src/autom8_asana/api/dependencies.py" = ["E402"]
"src/autom8_asana/services/resolver.py" = ["E402"]
"src/autom8_asana/services/universal_strategy.py" = ["E402"]

# CodeArtifact private package registry
[[tool.uv.index]]
name = "autom8y"
url = "https://autom8y-696318035277.d.codeartifact.us-east-1.amazonaws.com/pypi/autom8y-python/simple/"

# Platform primitive dependencies from CodeArtifact registry
[tool.uv.sources]
autom8y-auth = { index = "autom8y" }
autom8y-cache = { index = "autom8y" }
autom8y-config = { index = "autom8y" }
autom8y-http = { index = "autom8y" }
autom8y-log = { index = "autom8y" }
autom8y-telemetry = { index = "autom8y" }

[dependency-groups]
dev = [
    "pytest-json-report>=1.5.0",
]

