[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autom8y-asana"
version = "1.0.0"
description = "Async-first Asana API client extracted from autom8"
# readme = "README.md"  # Deferred to Phase 5
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "asana>=5.0.3",
    "polars>=0.20.0",
    "arrow>=1.3.0",
    # Platform primitives (TDD-PRIMITIVE-MIGRATION-001)
    "autom8y-config>=1.2.0",
    "autom8y-http[otel]>=0.5.0",
    "autom8y-cache>=0.4.0",  # Per TDD-GID-RESOLUTION-SERVICE: HierarchyAwareResolver + schema versioning
    "autom8y-log>=0.5.6",
    "opentelemetry-instrumentation-httpx>=0.42b0",  # W3C traceparent auto-propagation on outbound httpx calls
    "autom8y-core>=1.1.1",
    # Platform observability (PRD-PLATFORM-OBSERVABILITY-STD M3.3)
    # glass-S9: 0.6.0+ required for trace_computation decorator
    "autom8y-telemetry[aws,fastapi,otlp]>=0.6.0",
    "boto3>=1.42.19",                    # S3 for progressive cache warming (asyncio.to_thread)
    "pyyaml>=6.0.0",                     # YAML config parsing (lifecycle, automation, query/saved)
    "openpyxl>=3.1.0,<4.0",              # Excel workbook generation (payment reconciliation bridge)
]

[project.optional-dependencies]
redis = [
    "redis>=5.0.0",
    "hiredis>=2.0.0", # C parser for performance (optional)
]
aws = [
    # boto3 provided by [project.dependencies] at >=1.42.19
]
api = [
    "fastapi>=0.115.0",
    "autom8y-api-schemas~=1.0",
    "uvicorn[standard]>=0.27.0",
    "slowapi>=0.1.9",
]
# auth: Platform authentication via autom8y-auth SDK
# JWT validation, JWKS fetching, and crypto are encapsulated in the SDK
auth = ["autom8y-auth[observability]>=1.1.0"]
# events: Domain event publishing via autom8y-events (EventBridge)
# Per ADR-bridge-dispatch-model Decision 3: BridgeExecutionComplete emission
events = ["autom8y-events>=0.1.0"]
# interop: Cross-service protocol alignment via autom8y-interop
# Per ADR-bridge-dispatch-model: Protocol annotation pressure, NOT client migration
interop = ["autom8y-interop>=1.2.0"]
# scheduler: Polling scheduler for development mode (production uses cron)
scheduler = ["apscheduler>=3.10.0"]
# lambda: AWS Lambda Runtime Interface Client for container-based Lambda execution
# Required for dual-mode Docker images that run both ECS (uvicorn) and Lambda (handler)
lambda = ["awslambdaric>=2.2.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "respx>=0.20.0",                       # httpx mocking
    "fakeredis>=2.20.0",                   # Redis mocking for tests
    "moto>=5.0.0",                         # AWS/S3 mocking for tests
    "boto3-stubs[secretsmanager]>=1.34.0", # Type stubs for boto3
    "autom8y-auth[observability]>=1.1.0",  # Required for test_auth tests
    # SDK testing subpackages (per TDD-SDK-TESTING-ADOPTION)
    "autom8y-log[testing]>=0.5.6",
    "autom8y-cache[testing]>=0.4.0",
    "autom8y-http[testing]>=0.5.0",
    "autom8y-config[testing]>=1.2.0",
    "autom8y-core[testing]>=1.1.1",
    "autom8y-auth[testing]>=1.1.0",
    "openapi-spec-validator>=0.7.1",       # OpenAPI 3.2.0 spec validation in CI
]

[project.scripts]
autom8-query = "autom8_query_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/autom8_asana", "src/autom8_query_cli.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60
timeout_method = "thread"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring live API access",
    "benchmark: marks tests as performance benchmarks",
]

[tool.coverage.run]
source = ["src/autom8_asana"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

# Ignore missing stubs for optional dependencies
[[tool.mypy.overrides]]
module = "phonenumbers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "awslambdaric.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mypy_boto3_s3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openpyxl", "openpyxl.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "slowapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nameparser.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "autom8y_events.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "autom8y_interop.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prometheus_client"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "autom8_asana.models.core"
ignore_missing_imports = true

# Pre-existing mypy strict violations (no-any-return in polars/dataframe code)
[[tool.mypy.overrides]]
module = "autom8_asana.cache.integration.dataframe_cache"
ignore_errors = true

[[tool.mypy.overrides]]
module = "autom8_asana.services.universal_strategy"
ignore_errors = true

[[tool.mypy.overrides]]
module = "autom8_asana.dataframes.builders.progressive"
ignore_errors = true

[[tool.mypy.overrides]]
module = "autom8_asana.services.dataframe_service"
ignore_errors = true

[[tool.mypy.overrides]]
module = "autom8_asana.query.__main__"
ignore_errors = true

[[tool.mypy.overrides]]
module = "autom8_asana.api.routes.query"
ignore_errors = true

# New intake service files use dynamic SDK APIs not yet typed
[[tool.mypy.overrides]]
module = "autom8_asana.services.intake_resolve_service"
ignore_errors = true

[[tool.mypy.overrides]]
module = "autom8_asana.services.intake_create_service"
ignore_errors = true

[[tool.mypy.overrides]]
module = "autom8_asana.services.intake_custom_field_service"
ignore_errors = true

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

# Exclude non-production code from strict linting
extend-exclude = ["examples/", "prototypes/", "scripts/", "tmp/", "docs/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "G", "LOG", "TCH", "TID", "SIM"]
ignore = [
    "E501", # Line length handled by formatter
    "B904", # raise-without-from-inside-except - common pattern in HTTP handlers
    "B028", # stacklevel in warnings - not critical for tests
    "B007", # unused loop variable - often intentional for unpacking
    "B905", # zip-without-strict - not needed for equal-length iterables
    "G002", # %-format in logging is intentional (FR-LOG-005 lazy formatting)
    "G004", # f-string in logging - we prefer lazy %s but don't ban f-strings
    "G010", # logging.warn() deprecated -> logging.warning() (safety net)
    "G101", # extra field name clashes - structlog unpacks extra into event_dict, no stdlib LogRecord conflict
    "UP046", # PEP 695 type params - requires-python still >=3.11
    "UP047", # PEP 695 type params in functions - requires-python still >=3.11
]

[tool.ruff.lint.per-file-ignores]
# Tests have relaxed linting rules:
# - F841: unused variables (fixtures, mocks)
# - E402: imports after code (fixture setup)
# - F821: undefined names (removed classes like ProjectDataFrameBuilder)
# - F811: redefined imports
# - F401: unused imports (conditional test imports)
# - E711: comparison to None (testing equality operators)
# - B015: pointless comparison (testing comparison operators)
# - B017: blind exception assertions (pytest.raises(Exception))
# - B023: loop variable binding (threading tests)
"tests/**/*.py" = [
    "F841",
    "E402",
    "F821",
    "E711",
    "F811",
    "F401",
    "B015",
    "B017",
    "B023",
    "TID251",
    "SIM117",  # nested `with` using patch.object + pytest.raises is intentional in tests
]
"**/conftest.py" = ["F841", "E402"]
# Intentional delayed imports (circular import avoidance, logger-before-imports)
"src/autom8_asana/client.py" = ["E402"]
"src/autom8_asana/config.py" = ["E402"]
"src/autom8_asana/api/dependencies.py" = ["E402"]
"src/autom8_asana/services/resolver.py" = ["E402"]
"src/autom8_asana/services/universal_strategy.py" = ["E402"]
# CLI --live mode uses raw httpx as a thin HTTP client (not a service integration).
# Autom8yHttpClient is async-only and requires full platform config, which is
# inappropriate for a synchronous CLI development tool.
"src/autom8_asana/query/__main__.py" = ["TID251"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
]
runtime-evaluated-decorators = [
    "pydantic.field_validator",
    "pydantic.model_validator",
    "pydantic.validator",
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# Logging: Use autom8y-log SDK
"loguru".msg = "Use autom8y_log.get_logger() instead of loguru. See docs/guides/sdk-only-imports-migration.md"
"loguru.logger".msg = "Use autom8y_log.get_logger() instead of loguru.logger. See docs/guides/sdk-only-imports-migration.md"
"structlog".msg = "Use autom8y_log.get_logger() instead of direct structlog. See docs/guides/sdk-only-imports-migration.md"
# HTTP: Use autom8y-http SDK
"httpx".msg = "Use autom8y_http.Autom8yHttpClient instead of raw httpx. See docs/guides/sdk-only-imports-migration.md"
"httpx.AsyncClient".msg = "Use autom8y_http.Autom8yHttpClient instead of httpx.AsyncClient. See docs/guides/sdk-only-imports-migration.md"
"httpx.Client".msg = "Use autom8y_http.Autom8yHttpClient.sync() instead of httpx.Client. See docs/guides/sdk-only-imports-migration.md"

[tool.ruff.lint.isort]
known-first-party = ["autom8_asana"]

[tool.uv]
index-strategy = "first-index"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

# CodeArtifact private package registry
[[tool.uv.index]]
name = "autom8y"
url = "https://autom8y-696318035277.d.codeartifact.us-east-1.amazonaws.com/pypi/autom8y-python/simple/"

# Platform primitive dependencies from CodeArtifact registry
[tool.uv.sources]
autom8y-api-schemas = { path = "../autom8y-api-schemas", editable = true }
autom8y-auth = { index = "autom8y" }
autom8y-cache = { index = "autom8y" }
autom8y-config = { index = "autom8y" }
autom8y-http = { index = "autom8y" }
autom8y-log = { index = "autom8y" }
autom8y-core = { index = "autom8y" }
autom8y-telemetry = { index = "autom8y" }
autom8y-events = { index = "autom8y" }
autom8y-interop = { index = "autom8y" }

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-json-report>=1.5.0",
    "pytest-timeout>=2.4.0",
    "respx>=0.22.0",
    "slowapi>=0.1.9",
]
